<?xml version="1.0" encoding="utf-8"?><!--
   - FreeOTP
   -
   - Authors: Nathaniel McCallum <npmccallum@redhat.com>
   -
   - Copyright (C) 2018  Nathaniel McCallum, Red Hat
   -
   - Licensed under the Apache License, Version 2.0 (the "License");
   - you may not use this file except in compliance with the License.
   - You may obtain a copy of the License at
   -
   -     https://www.apache.org/licenses/LICENSE-2.0
   -
   - Unless required by applicable law or agreed to in writing, software
   - distributed under the License is distributed on an "AS IS" BASIS,
   - WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   - See the License for the specific language governing permissions and
   - limitations under the License.
   -->

<resources>
    <string name="app_name">FreeOTP</string>

    <!-- Buttons -->
    <string name="ok">Ok</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="restore">Restore from Backup</string>
    <string name="about">About</string>
    <string name="auto_copy_clipboard">Auto Clipboard</string>
    <string name="manual_add">Manual Add</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="add_anyway">Add Anyway</string>
    <string name="unknown_issuer">Unknown Issuer</string>
    <string name="enable_lock_screen">Enable Lock Screen</string>

    <!-- Strings related to token sharing. -->
    <string name="share_jelling_send_to">Send to…</string>
    <string name="share_jelling_scan_for">Scan for…</string>
    <string name="share_jelling_scanning_for">Scanning for…</string>
    <string name="share_jelling_bluetooth_devices">Bluetooth Devices</string>
    <string name="share_clipboard_copy_to">Copy to…</string>
    <string name="share_clipboard_clipboard">Clipboard</string>

    <!-- Strings related to camera errors. -->
    <string name="error_camera_open">Error while opening camera!</string>

    <!-- Strings for the various dialogs. -->
    <string name="main_about_title">FreeOTP Version %1$s (%2$d)</string>
    <string name="main_about_message">© 2013–2023 - Red Hat, Inc., et al.&lt;br/&gt;&lt;br/&gt;FreeOTP is licensed under &lt;a href=&quot;https://www.apache.org/licenses/LICENSE-2.0.html&quot;&gt;Apache 2.0&lt;/a&gt;.&lt;br/&gt;&lt;br/&gt;For more information, see our &lt;a href=&quot;https://freeotp.github.io&quot;&gt;website&lt;/a&gt;.</string>
    <string name="main_welcome">Welcome to FreeOTP!\n\nAdd a token to get started.</string>
    <string name="main_deletion_title">Delete selected tokens?</string>
    <string name="main_deletion_message">Deleting a token does not disable it on the server. If you continue, you may be locked out of your account. Deleting a token cannot be undone.</string>
    <string name="main_unsafe_title">Token is unsafe!</string>
    <string name="main_unsafe_message">The token you are attempting to add contains weak cryptographic parameters. Use of this token is strongly discouraged! Please alert your token provider.</string>
    <string name="main_invalid_title">Token is invalid!</string>
    <string name="main_invalid_message">The token you are attempting to add is invalid. Please alert your token provider.</string>
    <string name="main_error_title">Error!</string>
    <string name="main_error_message">An error occurred when trying to add a token.</string>
    <string name="main_lock_message">This token requires you to authenticate on each use. This means that your device\'s lock screen must be enabled. Please enable lock screen security and add the token again.</string>
    <string name="main_lock_title">Lock screen required!</string>
    <string name="main_invalidated_title">Key invalidated!</string>
    <string name="main_invalidated_message">The key for this token has been invalidated by the Android Key Store. This may have been due to a change in your lock screen settings. The token has been removed. Please contact your token provider.</string>
    <string name="main_restore_title">Restore from backup</string>
    <string name="main_backup_android_title">Android Backup</string>
    <string name="main_backup_android_alert">Encrypted FreeOTP token data is included in backup and restore operations performed by Android Backup. Android Backups must be enabled to take advantage of this feature.&lt;br/&gt;&lt;br/&gt;For more information, see &lt;a href=&quot;https://developer.android.com/guide/topics/data/backup&quot;&gt;Data Backup Overview&lt;/a&gt; and &lt;a href=&quot;https://support.google.com/android/answer/2819582?hl=en&quot;&gt;Android Backups&lt;/a&gt;</string>
    <string name="main_restore_message">Please enter backup password</string>
    <string name="main_restore_bad_password">Invalid password</string>
    <string name="main_restore_cancel_title">Cancel Restore?</string>
    <string name="main_restore_cancel_message">You will lose all previously backed up tokens!</string>
    <string name="main_restore_proceed">Proceed without Restoring</string>
    <string name="main_restore_go_back">Go Back</string>

    <!-- Strings for the password activity. -->
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="password_info">Token backups allow you to recover from data loss and effortlessly transfer your tokens to a new device.\n\nBackups are encrypted using the password provided below. The security of your backups depends on a strong password.\n\nThe FreeOTP security model dictates this password CANNOT be changed at a later time. Please take this into consideration when choosing a password.</string>
    <string name="password_weak">Password is too weak!</string>
    <string name="password_match">Passwords do not match!</string>


    <!-- Strings for Manual Add activity -->
    <string-array name="algorithms_array">
        <item>SHA1</item>
        <item>SHA224</item>
        <item>SHA256</item>
        <item>SHA384</item>
        <item>SHA512</item>
    </string-array>
    <string-array name="intervals_array">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>300</item>
    </string-array>
    <string name="manual_account_hint">jdoe@example.com</string>
    <string name="manual_issuer_hint">Example Inc</string>
    <string name="manual_secret_text">Secret</string>
    <string name="manual_secret_base32_text">(Base32)</string>
    <string name="manual_type_text">Type</string>
    <string name="manual_button_totp_text">TOTP</string>
    <string name="manual_button_hotp_text">HOTP</string>
    <string name="manual_digits_text">Digits</string>
    <string name="manual_button_digits_six">6</string>
    <string name="manual_button_digits_eight">8</string>
    <string name="manual_algorithm">Algorithm</string>
    <string name="manual_interval">Interval</string>
    <string name="manual_add_token">Add Token</string>
    <string name="manual_accessibility_algorithm">Token algorithm</string>
    <string name="manual_accessibility_interval">Token Interval</string>
    <string name="manual_invalid_title">Token is invalid!</string>
    <string name="manual_invalid_message">The token you are attempting to add is invalid. Please check that each field is valid following the OTP Key URI Format.</string>
    <string name="edit_token">Edit Token</string>
    <string name="get_started">GET STARTED</string>

    <!-- Strings for Backup related operations -->
    <string name="backup_title">Backup</string>
    <string name="restore_title">Restore</string>
    <string name="backup_restore_title">Backup and Restore</string>
    <string name="keystore_migration_explanation">FreeOTP tokens are now migrated into the Android Keystore! This results in increased security of token secrets, however key material is non-exportable. \n\nBackup and restore functionality is now added to ensure tokens can be recovered. You will be prompted to create a master password to setup encrypted token backups.</string>
    <string name="manual_backup_explanation">Alternatively, an encrypted backup data file can be exported to external storage from within the App. The top toolbar menu now contains items labeled \'Backup\' and \'Restore\' to utilize this manual backup method.</string>
    <string name="google_auto_backup_link">FreeOTP can participate in Android automatic backup and restore functionality. This &lt;a href=&quot;https://support.google.com/android/answer/2819582?hl=en&quot;&gt;Google link&lt;/a&gt; contains information on how to utilize this backup method.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="backup_imageview">backup imageView</string>
    <string name="keystore_image">keystore image</string>
    <string name="android_keystore_title">Android Keystore</string>
    <string name="menu_title">Menu</string>

</resources>
