<?xml version="1.0" encoding="utf-8"?>
<!--
   - FreeOTP
   -
   - Authors: Nathaniel McCallum <npmccallum@redhat.com>
   -
   - Copyright (C) 2018  Nathaniel McCallum, Red Hat
   -
   - Licensed under the Apache License, Version 2.0 (the "License");
   - you may not use this file except in compliance with the License.
   - You may obtain a copy of the License at
   -
   -     http://www.apache.org/licenses/LICENSE-2.0
   -
   - Unless required by applicable law or agreed to in writing, software
   - distributed under the License is distributed on an "AS IS" BASIS,
   - WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   - See the License for the specific language governing permissions and
   - limitations under the License.
   -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.fedorahosted.freeotp.main.Activity">
    <item
        android:visible="false"
        android:id="@+id/action_up"
        android:icon="@drawable/ic_up"
        android:title="@string/move_up"
        app:showAsAction="always"
        />

    <item
        android:visible="false"
        android:id="@+id/action_down"
        android:orderInCategory="100"
        android:icon="@drawable/ic_down"
        android:title="@string/move_down"
        app:showAsAction="always"
        />

    <item
        android:visible="false"
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="always"
        />

    <item
        android:visible="true"
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:icon="@drawable/ic_about"
        android:title="@string/about"
        app:showAsAction="always"
        />
</menu>
