<?xml version="1.0" encoding="utf-8"?>
<!--
   - FreeOTP
   -
   - Authors: Nathaniel McCallum <npmccallum@redhat.com>
   -
   - Copyright (C) 2018  Nathaniel McCallum, Red Hat
   -
   - Licensed under the Apache License, Version 2.0 (the "License");
   - you may not use this file except in compliance with the License.
   - You may obtain a copy of the License at
   -
   -     http://www.apache.org/licenses/LICENSE-2.0
   -
   - Unless required by applicable law or agreed to in writing, software
   - distributed under the License is distributed on an "AS IS" BASIS,
   - WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   - See the License for the specific language governing permissions and
   - limitations under the License.
   -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PasswordActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBar">
        <androidx.appcompat.widget.Toolbar
            app:popupTheme="@style/AppTheme.AppBar.Toolbar.Popup"
            style="@style/AppTheme.AppBar.Toolbar"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin">
        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/password_info"
            android:id="@+id/info"

            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:id="@+id/password_layout"
                app:passwordToggleEnabled="true"
                app:hintAnimationEnabled="true"
                app:errorEnabled="true"
                android:hint="@string/password"

                android:layout_marginTop="@dimen/margin"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:id="@+id/password"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginBottom="36dp"
                android:layout_marginEnd="18dp"
                android:layout_gravity="bottom|end"

                android:visibility="invisible"
                android:id="@+id/progress"
                />
        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:passwordToggleEnabled="true"
            app:hintAnimationEnabled="true"
            app:errorEnabled="true"

            android:id="@+id/confirm_layout"
            android:hint="@string/password_confirm"
            android:visibility="invisible"

            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/confirm"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"

                android:enabled="false"
                android:id="@+id/done"
                android:text="@string/done"
                />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>